fix spacing

--- a/frontend/src/components/CreateBookPage/CreateBookPage.css
+++ b/frontend/src/components/CreateBookPage/CreateBookPage.css
@@ -141,9 +141,12 @@
 .create-book-description-text {
     width: 650px;
     height: 20px;
+    margin-top: 8px;
+    margin-bottom: -8px;
     resize: none;
     border: none;
     outline: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
     font-weight: bold;
 }
@@ -227,6 +230,9 @@
 
 .create-book-genre-div {
     font-weight: bold;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
 
 .create-book-genre-text {
@@ -246,10 +252,10 @@
         /* Keeps the content on a single line */
         margin: 0 auto;
         /* Gives that scrolling effect as the typing happens */
-        letter-spacing: .15em;
+        letter-spacing: .1em;
         /* Adjust as needed */
         animation:
-            typewriter 2s steps(44) 1s 1 normal both,
+            typewriter 2.5s steps(44) 1s 1 normal both,
             blinkTextCursor 1000ms steps(44) infinite normal;
         z-index: 9999;
 }
