--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -72,7 +72,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    z-index: 999;
+    z-index: 9999;
 
 }
 
